<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/secondscreen_background">

    <TextView
        android:id="@+id/tvRegisterInRF"
        style="@style/BigTextViewThin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/let_s_sign_in"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/tvDontHaveAccInLF"
        style="@style/MediumTextViewThin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_yet_press_here"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterInRF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmailRF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvDontHaveAccInLF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPasswordRF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etEmailRF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/SmallTextViewThin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/etPasswordRF"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnLogin"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>