<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/secondscreen_background">

    <TextView
        android:id="@+id/tvRegisterInFAO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_marginTop="300dp"
        style="@style/BigTextViewThin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginFAO"/>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnLoginFAO"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterInFAO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tvRegisterFAO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/if_you_haven_t_create"
        style="@style/BigTextViewThin"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFAO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnRegisterFAO"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterFAO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"/>



</androidx.constraintlayout.widget.ConstraintLayout>