<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvResetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mark_pro_bold"
        android:text="@string/reset_password"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvSendLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/mark_pro"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        app:layout_constraintStart_toStartOf="@+id/tvResetPasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPasswordTitle"
        />

    <EditText
        android:id="@+id/etResetPasswordEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSendLink"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:fontFamily="@font/mark_pro_medium"
        android:textColor="@color/black"
        android:backgroundTint="@color/g_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etResetPasswordEmail"
        app:layout_constraintEnd_toStartOf="@id/btnResetConfirm"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:fontFamily="@font/mark_pro_medium"
        android:backgroundTint="@color/g_blue_light"
        app:layout_constraintStart_toEndOf="@+id/btnResetCancel"
        app:layout_constraintTop_toBottomOf="@+id/etResetPasswordEmail"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>